Use Add-AzADAppPermission instead of RequiredResourceAccess hashtable Fixes #1

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Device Classification Setup Instructions"
+    "# Device Classification Setup (Setup Instructions)"
    ]
   },
   {
@@ -12,6 +12,13 @@
    "metadata": {},
    "source": [
     "## Environment Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Make sure you prepared the .env file in the root directory of the project. (Check the README for default values)"
    ]
   },
   {
@@ -178,6 +185,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There are two ways to create a certificate for the device:\n",
+    " - Create a self-signed certificate\n",
+    " - Create a certificate signed by a CA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### New Self-Signed Certificate (Option 1)"
    ]
   },
@@ -329,7 +345,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: Add instructions for getting CA certificate"
+    "Place the CA certificates in Certificate folder. Rename according to values of PubCertifcateFileName and PrivCertifcateFileName frome .env file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Write-Host \"PubCertFilePath : $(Test-Path -Path $PubCertFilePath)\"\n",
+    "Write-Host \"PrivCertFilePath: $(Test-Path -Path $PrivCertFilePath)\""
    ]
   },
   {
@@ -446,57 +479,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Microsoft Graph Permissions\n",
-    "\n",
-    "| **Scope** | **Type** | **Permission** | **Id** |\n",
-    "|-----------|----------|----------------|------------------------|\n",
-    "| User.Read | Delegated | Sign in and read user profile | e1fe6dd8-ba31-4d61-89e7-88639da4683d\n",
-    "| Device.ReadWrite.All | Application | Read and write devices | 1138cb37-bd11-4084-a2b7-9f71582aeddb\n",
-    "| DeviceManagementConfiguration.Read.All | Application | Read Microsoft Intune device configuration and policies | dc377aa6-52d8-4e23-b271-2a7ae04cedf3\n",
-    "| DeviceManagementManagedDevices.Read.All | Application | Read Microsoft Intune devices | f51be20-0bb4-4fed-bf7b-db946066c75e\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "$RequiredResourceAccess = @{\n",
-    "  ResourceAppId = \"00000003-0000-0000-c000-000000000000\";\n",
-    "  ResourceAccess = @(\n",
-    "      @{\n",
-    "          Id = \"e1fe6dd8-ba31-4d61-89e7-88639da4683d\";\n",
-    "          Type = \"Scope\"\n",
-    "      },\n",
-    "      @{\n",
-    "          Id = \"1138cb37-bd11-4084-a2b7-9f71582aeddb\";\n",
-    "          Type = \"Role\"\n",
-    "      },\n",
-    "      @{\n",
-    "          Id = \"dc377aa6-52d8-4e23-b271-2a7ae04cedf3\";\n",
-    "          Type = \"Role\"\n",
-    "      },\n",
-    "      @{\n",
-    "          Id = \"2f51be20-0bb4-4fed-bf7b-db946066c75e\";\n",
-    "          Type = \"Role\"\n",
-    "      }\n",
-    "  )\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Create App Registration"
    ]
   },
@@ -513,7 +495,99 @@
    },
    "outputs": [],
    "source": [
-    "$AppRegistration = New-AzADApplication -DisplayName $AppRegistrationName -RequiredResourceAccess $RequiredResourceAccess"
+    "$AppRegistration = New-AzADApplication -DisplayName $AppRegistrationName #-RequiredResourceAccess $RequiredResourceAccess\n",
+    "$AppRegistration | Select DisplayName, AppId, Id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add API Permissions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| **Scope** | **Type** | **Permission** | **Id** | **Resource App ID** |\n",
+    "|-----------|----------|----------------|------------------------|------------------------|\n",
+    "| User.Read | Delegated | Sign in and read user profile | e1fe6dd8-ba31-4d61-89e7-88639da4683d | 00000003-0000-0000-c000-000000000000 (Microsoft Graph) |\n",
+    "| Device.ReadWrite.All | Application | Read and write devices | 1138cb37-bd11-4084-a2b7-9f71582aeddb  | 00000003-0000-0000-c000-000000000000 (Microsoft Graph) |\n",
+    "| DeviceManagementConfiguration.Read.All | Application | Read Microsoft Intune device configuration and policies | dc377aa6-52d8-4e23-b271-2a7ae04cedf3 | 00000003-0000-0000-c000-000000000000 (Microsoft Graph) |\n",
+    "| DeviceManagementManagedDevices.Read.All | Application | Read Microsoft Intune devices | f51be20-0bb4-4fed-bf7b-db946066c75e | 00000003-0000-0000-c000-000000000000 (Microsoft Graph) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Add API Permissions to Azure AD Application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# User.Read\n",
+    "Add-AzADAppPermission `\n",
+    "    -ObjectId $AppRegistration.Id `\n",
+    "    -ApiId 00000003-0000-0000-c000-000000000000  `\n",
+    "    -PermissionId e1fe6dd8-ba31-4d61-89e7-88639da4683d  `\n",
+    "    -Type Scope\n",
+    "\n",
+    "# Device.ReadWrite.All\n",
+    "Add-AzADAppPermission  `\n",
+    "    -ObjectId $AppRegistration.Id `\n",
+    "    -ApiId 00000003-0000-0000-c000-000000000000  `\n",
+    "    -PermissionId 1138cb37-bd11-4084-a2b7-9f71582aeddb  `\n",
+    "    -Type Role\n",
+    "\n",
+    "# DeviceManagementConfiguration.Read.All\n",
+    "Add-AzADAppPermission  `\n",
+    "    -ObjectId $AppRegistration.Id `\n",
+    "    -ApiId 00000003-0000-0000-c000-000000000000  `\n",
+    "    -PermissionId dc377aa6-52d8-4e23-b271-2a7ae04cedf3  `\n",
+    "    -Type Role\n",
+    "\n",
+    "# DeviceManagementConfiguration.ReadWrite.All\n",
+    "Add-AzADAppPermission  `\n",
+    "    -ObjectId $AppRegistration.Id `\n",
+    "    -ApiId 00000003-0000-0000-c000-000000000000  `\n",
+    "    -PermissionId 2f51be20-0bb4-4fed-bf7b-db946066c75e  `\n",
+    "    -Type Role"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List Permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Get-AzADAppPermission  -ObjectId $AppRegistration.Id"
    ]
   },
   {
@@ -771,7 +845,7 @@
     "    -Value $RemediationScriptID `\n",
     "    -ResourceGroupName $ResourceGroupName `\n",
     "    -Description \"Id of the remediation script get it from https://graph.microsoft.com/beta/deviceManagement/deviceHealthScripts/\" `\n",
-    "    -Encrypted $False\n"
+    "    -Encrypted $False"
    ]
   },
   {
@@ -799,7 +873,7 @@
     "    -Name \"Microsoft.Graph.Authentication\"  `\n",
     "    -ContentLink \"https://devopsgallerystorage.blob.core.windows.net:443/packages/microsoft.graph.authentication.2.12.0.nupkg\"  `\n",
     "    -ResourceGroupName $ResourceGroupName  `\n",
-    "    -RuntimeVersion 7.2\n"
+    "    -RuntimeVersion 7.2"
    ]
   },
   {
