fix display automation account when created

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -723,7 +723,8 @@
    },
    "outputs": [],
    "source": [
-    "$AzAutomationAccount New-AzAutomationAccount -Name $AutomationAccountName -ResourceGroupName $ResourceGroupName -Location $Location -Plan $Plan"
+    "$AzAutomationAccount = New-AzAutomationAccount -Name $AutomationAccountName -ResourceGroupName $ResourceGroupName -Location $Location -Plan $Plan\n",
+    "$AzAutomationAccount | Select AutomationAccountName , Location, State"
    ]
   },
   {
