Better .env file handling

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -48,58 +48,20 @@
    },
    "outputs": [],
    "source": [
+    "$varlist = @()\n",
     "get-content .env | foreach {\n",
     "    $name, $value = $_.split('=').Trim().Replace('\"', '')\n",
-    "    Set-Variable -name $name -value $value\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Output Variable (optional)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Write-Host \"TenantID:                  $TenantID\"\n",
-    "Write-Host \"SubscriptionID:            $SubscriptionID\"\n",
-    "Write-Host \"AppRegistrationName:       $AppRegistrationName\"\n",
-    "Write-Host \"CertifcateName:            $CertifcateName\"\n",
-    "Write-Host \"PubCertifcateFileName:     $PubCertifcateFileName\"\n",
-    "Write-Host \"PrivCertifcateFileName:    $PrivCertifcateFileName\"\n",
-    "\n",
+    "    if (!([string]::IsNullOrWhiteSpace($name) -or $name.Contains('#'))) {\n",
+    "      $varlist += @(New-Object PSObject -Property @{Name=$name;Value=$value})\n",
+    "      Set-Variable -name $name -value $value\n",
+    "    }\n",
+    "}\n",
     "$PubCertFilePath = \".\\Certificate\\$($PubCertifcateFileName)\"\n",
     "$PrivCertFilePath = \".\\Certificate\\$($PrivCertifcateFileName)\"\n",
-    "\n",
-    "Write-Host \"PubCertFilePath:           $PubCertFilePath\"\n",
-    "Write-Host \"PrivCertFilePath:          $PrivCertFilePath\"\n",
-    "\n",
-    "Write-Host \"AutomationAccountName:     $AutomationAccountName\"\n",
-    "Write-Host \"ResourceGroupName:         $ResourceGroupName\"\n",
-    "Write-Host \"Location:                  $Location\"\n",
-    "Write-Host \"Plan:                      $Plan\"\n",
-    "\n",
-    "Write-Host \"ClearValue:                $ClearValue\"\n",
-    "Write-Host \"DeviceClassificationList:  $DeviceClassificationList\"\n",
-    "Write-Host \"ExtensionAttribute:        $ExtensionAttribute\"\n",
-    "Write-Host \"RemediationScriptName:     $RemediationScriptName\"\n",
-    "\n",
-    "Write-Host \"AppConnectionName:         $AppConnectionName\"\n",
-    "Write-Host \"RunBookName:               $RunBookName\"\n",
-    "Write-Host \"DailyScheduleTime:         $DailyScheduleTime\""
+    "$varlist += @(New-Object PSObject -Property @{Name=\"PubCertFilePath\";Value=$PubCertFilePath})\n",
+    "$varlist += @(New-Object PSObject -Property @{Name=\"PrivCertFilePath\";Value=$PubCertFilePath})\n",
+    "$varlist | select Name, Value | ft -AutoSize\n",
+    "Remove-Variable name, value, varlist"
    ]
   },
   {
