Automate remediation script package upload Fixes #9

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -338,37 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Intune Remediation Script Package"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Goto the [Intune Portal - Remediation Scripts](https://intune.microsoft.com/#view/Microsoft_Intune_DeviceSettings/DevicesMenu/~/remediations) and create a new script package. \n",
-    "\n",
-    "\n",
-    "Page 1\n",
-    "- Name = \"Device Classification\"\n",
-    "- Description = \"Uses only a detection script. It detects the device classification and outputs the classification as preRemediationDetectionScriptOutput property. This property is later being used in a Azure Automation Runbook to set the Entra ID device extensionAttribute1-15\"\n",
-    "- Publisher = \"MrWyss-MSFT\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "Page 2\n",
-    "- Detection script file: [\"./Remediation Script/detect.ps1\"](<./Remediation Script/detect.ps1>)\n",
-    "- Run Script in 64-bit PowerShell = Yes\n",
-    "\n",
-    "![remediationscript1s.png](./_res/pictures/remediationscript1s.png) ![remediationscript2s.png](./_res/pictures/remediationscript2s.png)\n",
-    "\n",
-    "Scope and assign the script to your devices."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get Intune Remediation Script Package ID"
+    "### Connect GraphAPI"
    ]
   },
   {
@@ -389,6 +359,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Intune Remediation Script Package"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -401,10 +378,55 @@
    },
    "outputs": [],
    "source": [
-    "$Uri = 'https://graph.microsoft.com/beta/deviceManagement/deviceHealthScripts?$filter=displayName eq ''{0}''&$select=displayName,id' -f $RemediationScriptName\n",
-    "$Result = Invoke-MgGraphRequest -Method GET -Uri $Uri\n",
-    "$RemediationScriptID = $Result.value.id\n",
-    "$RemediationScriptID"
+    "$EncodedDetectionScript = [convert]::ToBase64String((Get-Content '.\\Remediation Script\\detect.ps1' -AsByteStream))\n",
+    "$RemediationScriptUri = \"https://graph.microsoft.com/beta/deviceManagement/deviceHealthScripts\"\n",
+    "$DetectionScriptPackage = @\"\n",
+    "{\n",
+    "  \"@odata.type\": \"#microsoft.graph.deviceHealthScript\",\n",
+    "  \"publisher\": \"$RemediationScriptPublisher\",\n",
+    "  \"version\": \"1.0\",\n",
+    "  \"displayName\": \"$RemediationScriptName\",\n",
+    "  \"description\": \"Uses only a detection script. It detects the device classification and outputs the classification as preRemediationDetectionScriptOutput property. This property is later being used in a Azure Automation Runbook to set the Entra ID device extensionAttribute1-15\",\n",
+    "  \"detectionScriptContent\": \"$EncodedDetectionScript\",\n",
+    "  \"runAsAccount\": \"system\",\n",
+    "  \"runAs32Bit\": \"False\"\n",
+    "}\n",
+    "\"@\n",
+    "$RemediationScript = Invoke-MgGraphRequest -Uri $RemediationScriptUri -Method POST -Body $DetectionScriptPackage\n",
+    "$RemediationScriptID = $RemediationScript.id\n",
+    "$RemediationScript | select displayName, publisher,runAsAccount, runAs32Bit, id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deploy the Remediation Script Package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$IntunePortalLinkRS = \"https://intune.microsoft.com/#view/Microsoft_Intune_Enrollment/UXAnalyticsScriptMenu/~/overview/id/$RemediationScriptID/scriptName/$RemediationScriptName/isFirstParty~/false\"\n",
+    "$IntunePortalLinkRS = [URI]::EscapeUriString($IntunePortalLinkRS)\n",
+    "Write-Host \"Goto: ($IntunePortalLinkRS)\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Goto the link above and deploy the Remediation Script Package to your target devices."
    ]
   },
   {
