Fix Certificate folder Fixes #11 and remove the pw vars

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -56,8 +56,8 @@
     "      Set-Variable -name $name -value $value\n",
     "    }\n",
     "}\n",
-    "$PubCertFilePath = \".\\Certificate\\$($PubCertifcateFileName)\"\n",
-    "$PrivCertFilePath = \".\\Certificate\\$($PrivCertifcateFileName)\"\n",
+    "$PubCertFilePath = \".\\Certificates\\$($PubCertifcateFileName)\"\n",
+    "$PrivCertFilePath = \".\\Certificates\\$($PrivCertifcateFileName)\"\n",
     "$varlist += @(New-Object PSObject -Property @{Name=\"PubCertFilePath\";Value=$PubCertFilePath})\n",
     "$varlist += @(New-Object PSObject -Property @{Name=\"PrivCertFilePath\";Value=$PubCertFilePath})\n",
     "$varlist | select Name, Value | ft -AutoSize\n",
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set Password"
+    "#### Set certificate password"
    ]
   },
   {
@@ -304,7 +304,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "$NewSelfSignedCertificate = New-SelfSignedCertificate -Subject \"CN=$CertifcateName\" -CertStoreLocation \"Cert:\\CurrentUser\\My\" -KeyExportPolicy Exportable -KeySpec Signature -KeyLength 2048 -KeyAlgorithm RSA -HashAlgorithm SHA256\n",
     "$NewSelfSignedCertificate"
    ]
@@ -329,6 +328,9 @@
    },
    "outputs": [],
    "source": [
+    "If (-not (Test-Path \".\\Certificates\\\")) { \n",
+    "    New-Item -Path \".\\Certificates\\\" -ItemType Directory -Force | Out-Null\n",
+    "}\n",
     "$PubCertFile = Export-Certificate -Cert $NewSelfSignedCertificate -FilePath $PubCertFilePath\n",
     "$PubCertFile"
    ]
@@ -353,8 +355,11 @@
    },
    "outputs": [],
    "source": [
-    "$mypwd = ConvertTo-SecureString -String $CertifcatePassword -Force -AsPlainText \n",
-    "$PrivCertFile = Export-PfxCertificate -Cert $NewSelfSignedCertificate -FilePath $PrivCertFilePath -Password $mypwd\n",
+    "If (-not (Test-Path \".\\Certificates\\\")) { \n",
+    "    New-Item -Path \".\\Certificates\\\" -ItemType Directory -Force | Out-Null\n",
+    "}\n",
+    "$CertExportPW = ConvertTo-SecureString -String $CertifcatePassword -Force -AsPlainText \n",
+    "$PrivCertFile = Export-PfxCertificate -Cert $NewSelfSignedCertificate -FilePath $PrivCertFilePath -Password $CertExportPW\n",
     "$PrivCertFile"
    ]
   },
@@ -363,6 +368,13 @@
    "metadata": {},
    "source": [
     "#### Remove Certificate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the certificate thumbprint"
    ]
   },
   {
@@ -382,6 +394,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove it from the certificate store"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -395,6 +414,29 @@
    "outputs": [],
    "source": [
     "Remove-Item -Path Cert:\\CurrentUser\\My\\$($NewSelfSignedCertificate.Thumbprint) -DeleteKey"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove the certificate password variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Remove-Variable CertifcatePassword, CertExportPW"
    ]
   },
   {
@@ -731,15 +773,38 @@
    "outputs": [],
    "source": [
     "Write-Host $PrivCertFilePath\n",
-    "#!set --name CertPW --value @password:\"Please enter the Certificate (pfx) $PrivCertFilePath password\"\n",
-    "$Password = ConvertTo-SecureString -String $CertPW -AsPlainText -Force\n",
+    "#!set --name CertifcatePassword --value @password:\"Please enter the Certificate (pfx) $PrivCertFilePath password\"\n",
+    "$CertPassword = ConvertTo-SecureString -String $CertifcatePassword -AsPlainText -Force\n",
     "$AzAutomationCertificate = New-AzAutomationCertificate `\n",
     "    -AutomationAccountName $AutomationAccountName `\n",
     "    -Name $CertifcateName `\n",
     "    -Path $PrivCertFilePath `\n",
-    "    -Password $Password `\n",
+    "    -Password $CertPassword `\n",
     "    -ResourceGroupName $ResourceGroupName\n",
     "$AzAutomationCertificate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove certificate password variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Remove-Variable CertifcatePassword, CertPassword"
    ]
   },
   {
