Fix certificate file name typo

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -56,8 +56,8 @@
     "      Set-Variable -name $name -value $value\n",
     "    }\n",
     "}\n",
-    "$PubCertFilePath = \".\\Certificates\\$($PubCertifcateFileName)\"\n",
-    "$PrivCertFilePath = \".\\Certificates\\$($PrivCertifcateFileName)\"\n",
+    "$PubCertFilePath = \".\\Certificates\\$($PubCertificateFileName)\"\n",
+    "$PrivCertFilePath = \".\\Certificates\\$($PrivCertificateFileName)\"\n",
     "$varlist += @(New-Object PSObject -Property @{Name=\"PubCertFilePath\";Value=$PubCertFilePath})\n",
     "$varlist += @(New-Object PSObject -Property @{Name=\"PrivCertFilePath\";Value=$PubCertFilePath})\n",
     "$varlist | select Name, Value | ft -AutoSize\n",
@@ -443,14 +443,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get CA Certificate (Option 2)"
+    "### Use CA certificates (Option 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Place the CA certificates in Certificate folder. Rename according to values of PubCertifcateFileName and PrivCertifcateFileName frome .env file."
+    "Create a `Certificates` folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "If (-not (Test-Path \".\\Certificates\\\")) { \n",
+    "    New-Item -Path \".\\Certificates\\\" -ItemType Directory -Force | Out-Null\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Place the CA certificates in Certificate folder. Rename according to values of `PubCertificateFileName` and `PrivCertificateFileName` from the `.env` file."
    ]
   },
   {
