Update IntuneDeviceClassification.ipynb with Azure Automation Account details

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -1047,6 +1047,39 @@
     "    -ScheduleName \"Daily\"   `\n",
     "    -AutomationAccountName $AutomationAccountName  `\n",
     "    -ResourceGroupName $ResourceGroupName"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check out the Azure Automation Account and the Runbook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- View and modify the Variables\n",
+    "- View and modify the Schedule\n",
+    "- Test run the Runbook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$url = \"https://portal.azure.com/#@$TenantID/resource/subscriptions/$SubscriptionID/resourceGroups/$ResourceGroupName/providers/Microsoft.Automation/automationAccounts/$AutomationAccountName/overview\" \n",
+    "Write-Host \"Goto : $url\""
    ]
   }
  ],
