Add ClearValue as default to DeviceClassificationList in the Runbook Script Fixes #17

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -902,7 +902,7 @@
     "    -Name \"DeviceClassificationList\" `\n",
     "    -Value $DeviceClassificationList `\n",
     "    -ResourceGroupName $ResourceGroupName `\n",
-    "    -Description \"Comma separted list of Classifications. Make sure there are no spaces before and after the comma and have the clear value in the list as well e.g. CAD Device,Standard Device,Local Admin Device, clear\" `\n",
+    "    -Description \"Comma separted list of Classifications. Make sure there are no spaces before and after the comma and have the clear value in the list as well e.g. CAD Device,Standard Device,Local Admin Device\" `\n",
     "    -Encrypted $False\n",
     "\n",
     "New-AzAutomationVariable `\n",
