Clean output of the ipynb and redact sensitive values Fixes #19 and a var name fix

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -48,6 +48,7 @@
    },
    "outputs": [],
    "source": [
+    "# Load Variables\n",
     "$varlist = @()\n",
     "get-content .env | foreach {\n",
     "    $name, $value = $_.split('=').Trim().Replace('\"', '')\n",
@@ -59,9 +60,63 @@
     "$PubCertFilePath = \".\\Certificates\\$($PubCertificateFileName)\"\n",
     "$PrivCertFilePath = \".\\Certificates\\$($PrivCertificateFileName)\"\n",
     "$varlist += @(New-Object PSObject -Property @{Name=\"PubCertFilePath\";Value=$PubCertFilePath})\n",
-    "$varlist += @(New-Object PSObject -Property @{Name=\"PrivCertFilePath\";Value=$PubCertFilePath})\n",
-    "$varlist | select Name, Value | ft -AutoSize\n",
-    "Remove-Variable name, value, varlist"
+    "$varlist += @(New-Object PSObject -Property @{Name=\"PrivCertFilePath\";Value=$PrivCertFilePath})\n",
+    "Remove-Variable name, value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$varlist | Select Name, Value | Format-Table -AutoSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Redacted Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Redacted Output\n",
+    "$redacted_varlist = $varlist | ForEach-Object {\n",
+    "    if ($_.Name -eq \"TenantID\" -or $_.Name -eq \"SubscriptionID\") {\n",
+    "        $_.Value = \"REDACTED\"\n",
+    "    }\n",
+    "    $_\n",
+    "}\n",
+    "\n",
+    "$redacted_varlist | Select Name, Value | Format-Table -AutoSize\n",
+    "Remove-Variable varlist, redacted_varlist"
    ]
   },
   {
@@ -162,7 +217,10 @@
    "outputs": [],
    "source": [
     "Connect-MgGraph -TenantId $TenantID -NoWelcome\n",
-    "Get-MgContext"
+    "$mgcontext = Get-MgContext\n",
+    "\n",
+    "# Redacted Output\n",
+    "$mgcontext | Select AppName, Scopes, AuthType, TokenCredentialType | Format-List"
    ]
   },
   {
@@ -201,6 +259,8 @@
     "\"@\n",
     "$RemediationScript = Invoke-MgGraphRequest -Uri $RemediationScriptUri -Method POST -Body $DetectionScriptPackage\n",
     "$RemediationScriptID = $RemediationScript.id\n",
+    "$IntunePortalLinkRS = \"https://intune.microsoft.com/#view/Microsoft_Intune_Enrollment/UXAnalyticsScriptMenu/~/overview/id/$RemediationScriptID/scriptName/$RemediationScriptName/isFirstParty~/false\"\n",
+    "$IntunePortalLinkRS = [URI]::EscapeUriString($IntunePortalLinkRS)\n",
     "$RemediationScript | select displayName, publisher,runAsAccount, runAs32Bit, id"
    ]
   },
@@ -212,28 +272,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create link, click to navigate and deploy the Remediation Script Package to your target devices."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
-     "language": "pwsh"
+     "language": "javascript"
     },
     "polyglot_notebook": {
-     "kernelName": "pwsh"
+     "kernelName": "javascript"
     }
    },
    "outputs": [],
    "source": [
-    "$IntunePortalLinkRS = \"https://intune.microsoft.com/#view/Microsoft_Intune_Enrollment/UXAnalyticsScriptMenu/~/overview/id/$RemediationScriptID/scriptName/$RemediationScriptName/isFirstParty~/false\"\n",
-    "$IntunePortalLinkRS = [URI]::EscapeUriString($IntunePortalLinkRS)\n",
-    "Write-Host \"Goto: ($IntunePortalLinkRS)\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Goto the link above and deploy the Remediation Script Package to your target devices."
+    "#!set --name IntunePortalLinkRS --value @powershell:IntunePortalLinkRS\n",
+    "#!import ./_helpers/style.html\n",
+    "#!html\n",
+    "<span id = \"IntuneLink\"></span>\n",
+    "#!pwsh\n",
+    "Start-Sleep -Milliseconds 100\n",
+    "#!js\n",
+    "createLink('IntuneLink', IntunePortalLinkRS, \"Open Remediation Script in Intune\", \"https://intune.microsoft.com/Content/favicon.ico\");"
    ]
   },
   {
@@ -522,7 +587,9 @@
    },
    "outputs": [],
    "source": [
-    "Connect-AzAccount -Tenant $TenantID -Subscription $SubscriptionID"
+    "$AzAccount = Connect-AzAccount -Tenant $TenantID -Subscription $SubscriptionID\n",
+    "$AzAccount.Context.Subscription.Name\n",
+    "#$AzAccount.Context | Select Subscription, Account, Tenant | Format-List"
    ]
   },
   {
@@ -546,7 +613,8 @@
    "outputs": [],
    "source": [
     "$AppRegistration = New-AzADApplication -DisplayName $AppRegistrationName #-RequiredResourceAccess $RequiredResourceAccess\n",
-    "$AppRegistration | Select DisplayName, AppId, Id"
+    "$AzureLinkAR = \"https://aad.portal.azure.com/#view/Microsoft_AAD_RegisteredApps/ApplicationMenuBlade/~/CallAnAPI/appId/$($AppRegistration.AppId)/isMSAApp~/false\"\n",
+    "$AppRegistration | Select DisplayName #, AppId, Id"
    ]
   },
   {
@@ -674,30 +742,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create link, click to navigate, review and Permission and Grant admin consent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
-     "language": "pwsh"
+     "language": "javascript"
     },
     "polyglot_notebook": {
-     "kernelName": "pwsh"
+     "kernelName": "javascript"
     }
    },
    "outputs": [],
    "source": [
-    "$Uri = \"https://aad.portal.azure.com/#view/Microsoft_AAD_RegisteredApps/ApplicationMenuBlade/~/CallAnAPI/appId/$($AppRegistration.AppId)/isMSAApp~/false\"\n",
-    "\n",
-    "Write-Host \"Grant Admin Consent for $AppRegistrationName\"\n",
-    "Write-Host \"Review and Permission and Grant admin consent\"\n",
-    "Write-Host \"GoTo: $Uri\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Make sure you granted admin consent on the Entra ID app registration"
+    "#!set --name AzureLinkAR --value @powershell:AzureLinkAR\n",
+    "#!import ./_helpers/style.html\n",
+    "#!html\n",
+    "<span id = \"AzureLinkAR\"></span>\n",
+    "#!pwsh\n",
+    "Start-Sleep -Milliseconds 100\n",
+    "#!js\n",
+    "createLink('AzureLinkAR', AzureLinkAR, \"Open App Registration in Azure\", \"https://aad.portal.azure.com/Content/favicon.ico\");"
    ]
   },
   {
@@ -727,7 +798,9 @@
    },
    "outputs": [],
    "source": [
-    "Connect-AzAccount -Tenant $TenantID -Subscription $SubscriptionID"
+    "$AzAccount = Connect-AzAccount -Tenant $TenantID -Subscription $SubscriptionID\n",
+    "$AzAccount.Context.Subscription.Name\n",
+    "#$AzAccount.Context | Select Subscription, Account, Tenant | Format-List"
    ]
   },
   {
@@ -750,7 +823,8 @@
    },
    "outputs": [],
    "source": [
-    "New-AzResourceGroup -Name $ResourceGroupName -Location $Location"
+    "$AzResourceGroup = New-AzResourceGroup -Name $ResourceGroupName -Location $Location\n",
+    "$AzResourceGroup | Select ResourceGroupName, Location, ProvisioningState #, ResourceId"
    ]
   },
   {
@@ -774,7 +848,8 @@
    "outputs": [],
    "source": [
     "$AzAutomationAccount = New-AzAutomationAccount -Name $AutomationAccountName -ResourceGroupName $ResourceGroupName -Location $Location -Plan $Plan\n",
-    "$AzAutomationAccount | Select AutomationAccountName , Location, State"
+    "$AzurePortalLinkAA = \"https://portal.azure.com/#@$TenantID/resource/subscriptions/$SubscriptionID/resourceGroups/$ResourceGroupName/providers/Microsoft.Automation/automationAccounts/$AutomationAccountName/overview\"\n",
+    "$AzAutomationAccount | Select AutomationAccountName, Location, State #, SubscriptionId"
    ]
   },
   {
@@ -858,15 +933,15 @@
     "   \"CertificateThumbprint\" = $AzAutomationCertificate.Thumbprint;\n",
     "   \"SubscriptionId\" = $SubscriptionID\n",
     "}\n",
+    "#$RunAsAccountConnectionFieldValues\n",
     "\n",
-    "$RunAsAccountConnectionFieldValues\n",
-    "\n",
-    "New-AzAutomationConnection -Name $AppConnectionName  `\n",
+    "$AzAutomationConnection = New-AzAutomationConnection -Name $AppConnectionName  `\n",
     "    -ConnectionTypeName AzureServicePrincipal `\n",
     "    -ConnectionFieldValues $RunAsAccountConnectionFieldValues `\n",
     "    -ResourceGroupName $ResourceGroupName `\n",
     "    -AutomationAccountName $AutomationAccountName `\n",
-    "    -Description \"Establishes a connection to the App Registration, with the certificate\""
+    "    -Description \"Establishes a connection to the App Registration, with the certificate\"\n",
+    "$AzAutomationConnection | Select Name, ConnectionTypeName #, FieldDefinitionValues "
    ]
   },
   {
@@ -889,7 +964,7 @@
    },
    "outputs": [],
    "source": [
-    "New-AzAutomationVariable `\n",
+    "$ClearValueVar = New-AzAutomationVariable `\n",
     "    -AutomationAccountName $AutomationAccountName `\n",
     "    -Name \"ClearValue\" `\n",
     "    -Value $ClearValue `\n",
@@ -897,7 +972,7 @@
     "    -Description \"Define the value from the remediation script output that should clear the extensionAttribute, e.g. clear\" `\n",
     "    -Encrypted $False\n",
     "\n",
-    "New-AzAutomationVariable `\n",
+    "$DeviceClassificationListVar = New-AzAutomationVariable `\n",
     "    -AutomationAccountName $AutomationAccountName `\n",
     "    -Name \"DeviceClassificationList\" `\n",
     "    -Value $DeviceClassificationList `\n",
@@ -905,7 +980,7 @@
     "    -Description \"Comma separted list of Classifications. Make sure there are no spaces before and after the comma and have the clear value in the list as well e.g. CAD Device,Standard Device,Local Admin Device\" `\n",
     "    -Encrypted $False\n",
     "\n",
-    "New-AzAutomationVariable `\n",
+    "$ExtensionAttributeVar = New-AzAutomationVariable `\n",
     "    -AutomationAccountName $AutomationAccountName `\n",
     "    -Name \"ExtensionAttribute\" `\n",
     "    -Value $ExtensionAttribute `\n",
@@ -913,13 +988,15 @@
     "    -Description \"Set the extensionAttribute1 to extensionAttribute15. Make sure it's not used for any other purpose. e.g. extensionAttribute1\" `\n",
     "    -Encrypted $False\n",
     "\n",
-    "New-AzAutomationVariable `\n",
+    "$RemediationScriptIDVar = New-AzAutomationVariable `\n",
     "    -AutomationAccountName $AutomationAccountName `\n",
     "    -Name \"RemediationScriptID\" `\n",
     "    -Value $RemediationScriptID `\n",
     "    -ResourceGroupName $ResourceGroupName `\n",
     "    -Description \"Id of the remediation script get it from https://graph.microsoft.com/beta/deviceManagement/deviceHealthScripts/\" `\n",
-    "    -Encrypted $False"
+    "    -Encrypted $False\n",
+    "\n",
+    "$ClearValueVar, $DeviceClassificationListVar, $ExtensionAttributeVar, $RemediationScriptIDVar | Select Name, Value, Description | Format-Table -AutoSize"
    ]
   },
   {
@@ -947,7 +1024,7 @@
     "    -Name \"Microsoft.Graph.Authentication\"  `\n",
     "    -ContentLink \"https://devopsgallerystorage.blob.core.windows.net:443/packages/microsoft.graph.authentication.2.12.0.nupkg\"  `\n",
     "    -ResourceGroupName $ResourceGroupName  `\n",
-    "    -RuntimeVersion 7.2"
+    "    -RuntimeVersion 7.2 | Select Name, ProvisioningState"
    ]
   },
   {
@@ -996,7 +1073,7 @@
     "    -Path \".\\AutomationAccount\\Runbook.ps1\" `\n",
     "    -Published  `\n",
     "    -ResourceGroupName $ResourceGroupName `\n",
-    "    -Type PowerShell72"
+    "    -Type PowerShell72 | Select Name, RunbookType, State"
    ]
   },
   {
@@ -1026,7 +1103,7 @@
     "    -StartTime $DailyScheduleTime  `\n",
     "    -DayInterval 1  `\n",
     "    -ResourceGroupName $ResourceGroupName  `\n",
-    "    -TimeZone $TimeZone"
+    "    -TimeZone $TimeZone | Select Name, TimeZone, StartTime, Frequency, NextRun"
    ]
   },
   {
@@ -1046,7 +1123,7 @@
     "    -RunbookName $RunBookName  `\n",
     "    -ScheduleName \"Daily\"   `\n",
     "    -AutomationAccountName $AutomationAccountName  `\n",
-    "    -ResourceGroupName $ResourceGroupName"
+    "    -ResourceGroupName $ResourceGroupName | Select ScheduleName, RunbookName"
    ]
   },
   {
@@ -1070,16 +1147,22 @@
    "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
-     "language": "pwsh"
+     "language": "javascript"
     },
     "polyglot_notebook": {
-     "kernelName": "pwsh"
+     "kernelName": "javascript"
     }
    },
    "outputs": [],
    "source": [
-    "$url = \"https://portal.azure.com/#@$TenantID/resource/subscriptions/$SubscriptionID/resourceGroups/$ResourceGroupName/providers/Microsoft.Automation/automationAccounts/$AutomationAccountName/overview\" \n",
-    "Write-Host \"Goto : $url\""
+    "#!set --name AzurePortalLinkAA --value @powershell:AzurePortalLinkAA\n",
+    "#!import ./_helpers/style.html\n",
+    "#!html\n",
+    "<span id = \"AzurePortalLinkAA\"></span>\n",
+    "#!pwsh\n",
+    "Start-Sleep -Milliseconds 100\n",
+    "#!js\n",
+    "createLink('AzurePortalLinkAA', AzurePortalLinkAA, \"Open Automation Account in Azure\", \"https://aad.portal.azure.com/Content/favicon.ico\");"
    ]
   }
  ],
