Update certificate password prompt

--- a/IntuneDeviceClassification.ipynb
+++ b/IntuneDeviceClassification.ipynb
@@ -873,7 +873,7 @@
    "outputs": [],
    "source": [
     "Write-Host $PrivCertFilePath\n",
-    "#!set --name CertifcatePassword --value @password:\"Please enter the Certificate (pfx) $PrivCertFilePath password\"\n",
+    "#!set --name CertifcatePassword --value @password:\"Please enter the Certificate (pfx) password\"\n",
     "$CertPassword = ConvertTo-SecureString -String $CertifcatePassword -AsPlainText -Force\n",
     "$AzAutomationCertificate = New-AzAutomationCertificate `\n",
     "    -AutomationAccountName $AutomationAccountName `\n",
